kubernetes/webhook-admission-controller/webhook-demo.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: webhook
  name: webhook
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhook
  template:
    metadata:
      labels:
        app: webhook
    spec:
      containers:
      - image: registry.cn-hangzhou.aliyuncs.com/mojo/wehbook:0.0.1
        imagePullPolicy: Always
        name: webhook
        volumeMounts:
        - mountPath: /etc/certs
          name: config
      serviceAccount: webhook
      volumes:
      - name: config
        secret:
          secretName: example-com-tls
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webhook
  name: webhook
  namespace: default
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app: webhook
